// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapse view have orderItem 1`] = `
Array [
  Object {
    "id": "1",
    "type": "ORDER_HEADER",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "1",
    "type": "ORDER",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "1",
    ],
    "type": "LINK-1-ORDER",
  },
  Object {
    "id": "1",
    "type": "ORDER_ITEM_ALL",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "1",
    ],
    "type": "LINK-1-ORDER",
  },
  Object {
    "id": "1",
    "type": "BATCH_ALL",
  },
]
`;

exports[`collapse view no orderItem 1`] = `
Array [
  Object {
    "id": "1",
    "type": "ORDER_HEADER",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "1",
    "type": "ORDER",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
]
`;

exports[`normal view normal data 1`] = `
Array [
  Object {
    "id": "1",
    "type": "ORDER_HEADER",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "1",
    "type": "ORDER",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "1",
    ],
    "type": "LINK-1-ORDER",
  },
  Object {
    "id": "1",
    "type": "ORDER_ITEM_ALL",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "1",
    ],
    "type": "LINK-1-ORDER",
  },
  Object {
    "id": "1",
    "type": "BATCH_ALL",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "2",
      "1",
    ],
    "type": "LINK-4-ORDER_ITEM",
  },
  Object {
    "id": "1",
    "type": "ORDER_ITEM",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "2",
      "1",
    ],
    "type": "LINK-1-BATCH",
  },
  Object {
    "id": "1",
    "type": "BATCH",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "1",
    "relatedIds": Array [
      "2",
    ],
    "type": "LINK-2-ORDER_ITEM",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "2",
    "relatedIds": Array [
      "2",
    ],
    "type": "LINK-4-BATCH",
  },
  Object {
    "id": "2",
    "type": "BATCH",
  },
  Object {
    "type": "",
  },
  Object {
    "id": "2",
    "relatedIds": Array [
      "2",
    ],
    "type": "LINK-4-ORDER_ITEM",
  },
  Object {
    "id": "2",
    "type": "ORDER_ITEM",
  },
  Object {
    "type": "",
  },
  Object {
    "type": "",
  },
]
`;
